# amphibious_robot

./: .ycm_extra_conf.py  README.md  nano.save
MYROBOT_control/: CMakeLists.txt  package.xml
MYROBOT_control/config/: my_control.yaml
MYROBOT_control/launch/: move.launch
MYROBOT_control/src/: control.py  test.py  train_auto.py  train_data_final.py  train_hand.py
devel/lib/pkgconfig/: point_transform.pc
devel/lib/point_transform/: point_transform
devel/share/point_transform/cmake/: point_transformConfig.cmake
pcl_ws/: .ycm_extra_conf.py  readme.md
pcl_ws/devel/: .catkin  setup.sh
pcl_ws/devel/lib/point_transform/: point_transform
pcl_ws/devel/share/point_transform/cmake/: point_transformConfig.cmake
pcl_ws/src/point_transform/: CMakeLists.txt
pcl_ws/src/point_transform/src/: point_transform.cpp
src/point_transform/: CMakeLists.txt
src/point_transform/src/: point_transform.cpp
trajectory_tracking/: CMakeLists.txt  ParamsMseAdamNewData.pkl  package.xml
trajectory_tracking/launch/: control.launch
trajectory_tracking/script/data_training/: 1.pkl  data_train.py  dnn.py  test.py  train_data_1.npy  train_data_get.py  xiao.pkl
trajectory_tracking/script/data_training/其他网络参数/: ParamsL1lossAdamNewData.pkl  params.pkl  params_L1loss.pkl  params_mse_adam.pkl
trajectory_tracking/script/dnn_mpc/: controller.py  main.py  mpc_line.py
trajectory_tracking/script/result/: ResultCompare.py  resultPlot.py  resultPlot_2.py  test.py
trajectory_tracking/script/result/result/: success_4_19.bag  tracking_pid.bag
trajectory_tracking/script/test/: test.py
trajectory_tracking/script/tracking/: optimize.py  optimize_networks.py  optimize_tradition.py  test.py  tf_my.py  tracking_data_collection.py  tracking_network.py  tracking_pid.py  tracking_sin.py  tracking_tradition.py
two_robot/: CMakeLists.txt  package.xml
two_robot/config/: joint_names_two_robot.yaml
two_robot/launch/: display.launch  gazebo.launch
two_robot/meshes/: base_link.STL  leg1.STL  leg2.STL  leg3.STL  leg4.STL  leg5.STL  leg6.STL
two_robot/model/heightmap_dirt2/: beifen  model.config  model.sdf
two_robot/model/heightmap_dirt2/materials/textures/: 4.xcf  5.xcf
two_robot/urdf/: two_robot.urdf
two_robot/worlds/: empty.world
(+22 files in other folders)
